--- a/SamuraiApp/ConsoleApp/ConsoleApp.csproj
+++ b/SamuraiApp/ConsoleApp/ConsoleApp.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SamuraiApp.Data\SamuraiApp.Data.csproj" />
   </ItemGroup>
 
